--- a/hellocucumber/build.gradle
+++ b/hellocucumber/build.gradle
@@ -5,6 +5,7 @@ repositories {
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12'
     testImplementation 'io.cucumber:cucumber-java:5.6.0'
 }
 
@@ -20,7 +21,7 @@ task cucumber() {
         javaexec {
             main = "io.cucumber.core.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', 'pretty', '--glue', 'hellocucumber', 'src/test/resources']
+            args = ['--strict', '--plugin', 'pretty', '--glue', 'hellocucumber', 'src/test/resources']
         }
     }
 }
